<resources>
    <string name="app_name">Nectar Online Shop</string>
    <string name="Search">Search</string>
    <string name="contact">CONTACT</string>
    <string name="about">ABOUT US</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="about_us">Connecting lives</string>
    <string name="hint">Search</string>
    <string name="developer">DEVELOPER</string>
    <string name="app_about">Powering online commerce</string>
    <string name="not_a_member">Not a member ?</string>
    <string name="facebook_adress">https://www.facebook.com/Nectar.M0bile.Softworks/</string>
    <string name="website_adress">https://cashmobil.co.ke</string>
    <string name="twitter_adress">https://cashmobil.co.ke</string>
    <string name="delivery_ku">Delivered within 20 minutes within KU, for other areas our agent will be in contact shortly to make your delivery</string>
    <string name="delivery_policy">The agent will call you immediately the order is made and make the delivery from our warehouse. If you chose GPS, We can get your location and come to you wherever you are provided you stay there</string>
    <string name="waranty">All our products come with a one year warranty</string>
    <string name="welcome_text">Enter your details below to start your unique Online shopping delivery experience,</string>
    <string name="shr_product_title">Item</string>
    <string name="shr_product_description">KSH 600</string>
    <string name="kopokopTill_for_messaging_payment">5258013</string>
    <string name="phone_adress">254768706343</string>
    <string name="logout">LOG OUT</string>
    <string name="sell">SELL</string>
    <string name="sell_link">https://cashmobil.co.ke/nectar/link/sell.php</string>
    <string name="developer_phone_adress">+254792517691</string>
    <string name="BRAND_NEW">BRAND NEW</string>
    <string name="REFURBISHED">REFURBISHED</string>
    <string name="SECONDHAND">SECOND HAND</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_description">This app enables users shop easily and conveniently at the cheapest price</string>
    <string name="order">How to order</string>
    <string name="order_desc">Go to the main menu and scroll to shop. Click an item to select. On the next page click buy or scroll down to view all item details. When your sure click BUY then click the cart icon to view your cart. You can add, delete or update your cart before clicking FINISH to proceed with your order </string>
    <string name="why_should_i_use">Why should i use Nectar</string>
    <string name="why_desc">We deliver fast and for cheap using top grade algorithms to fasten our delivery timelines. For areas around KU we deliver instantly within 10 to 20 minutes to all hostels. Areas around Kahawa, Ruiru we deliver in 20 minutes. We deliver fast food in clean heated mobile microwaves so that you enjoy hot food like you never left the kitchen, Our liqour is top grade and cheaper than bars. All this within the nectar app</string>
    <string name="decription">Cheap | Fast | Affordable</string>
    <string name="developer_mail">admin@cashmobil.co.ke</string>
    <string name="company_mail">nectar2019@gmail.com</string>
    <string name="instagram">https://www.instagram.com/invites/contact/?i=idlbajkjlo15&amp;utm_content=j8hlu9y</string>
    <string name="youtube">https://www.youtube.com/channel/UCW3G0HwHDVOxPka0Q3roQPw</string>
    <string name="whatsapp">vffbgb</string>
    <string name="playstore_link">https://cashmobil.co.ke/app.php</string>
    <string name="liqour_fragment_text">If you\'re around KU, KM, KAHAWA or RUIRU well deliver within minutes, get Fast food, delivered in mobile Hot microwaves and Liqour at the best prices</string>
    <string name="info">INFO</string>
    <string name="orders">MY ORDERS</string>
    <string name="fav">FAVOURITES</string>
    <string name="cashUnit">KSH</string>
    <string name="checking_payment">We will send you an SMS receipt confirming your order. Standby as our delivery agent will call you shortly to fulfill your purchase, meanwhile you can continue shopping</string>
    <string name="return_policy">"Goods once sold cannot be returned "</string>
    <string name="contacts_permission">Allow Nectar to access contacts</string>
    <string name="paybill_number">4030243</string>
    <string name="changeaccount">CHANGE ACCOUNT</string>
    <string name="channel_name">MY CHANNEL</string>
    <string name="channel_description">MY CHANNEL DESCRIPTION</string>
</resources>