<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/sell"
        android:icon="@drawable/ic_money_bag"
        android:title="@string/sell" />
    <item
        android:id="@+id/developer"
        android:icon="@drawable/ic_baseline_adb_24"
        android:title="@string/developer" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_outline_account_circle_24"
        android:title="@string/about" />
    <item
        android:id="@+id/contact"
        android:icon="@drawable/ic_baseline_contact_phone_24"
        android:title="@string/contact" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_power_settings_new_24"
        android:title="@string/logout" />

</menu>