<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="DuplicateIds"
    tools:context=".Fragment_Info">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView

                        android:id="@+id/logo"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_logo_cart_empty_straight_lines_bold_svg"
                        app:tint="@color/colorPrimaryDark" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/ic_baseline_help_outline_24"
                        app:tint="@color/colorPrimary" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/img"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="4dp"
                        android:layout_toRightOf="@id/img"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="About this app"
                            android:textColor="@android:color/widget_edittext_dark"
                            android:textSize="17sp"
                            android:textStyle="bold" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_description"
                            android:textColor="@android:color/widget_edittext_dark"
                            android:textSize="13sp"
                            android:textStyle="normal" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@color/colorPrimary" />
                    </LinearLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/ic_baseline_help_outline_24"
                        app:tint="@color/colorPrimary"
                       />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/img2"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="4dp"
                        android:layout_toRightOf="@id/img2"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order"
                            android:textColor="@android:color/widget_edittext_dark"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:drawablePadding="5dp"
                            android:drawableTint="@color/colorPrimary"
                            android:text="@string/order_desc"
                            android:textColor="@android:color/widget_edittext_dark"
                            android:textSize="13sp"
                            android:textStyle="normal"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@color/colorPrimary" />
                    </LinearLayout>


                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/ic_baseline_help_outline_24"
                        app:tint="@color/colorPrimary" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/img2"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="4dp"
                        android:layout_toRightOf="@id/img2"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="How long does it take to deliver"
                            android:textColor="@android:color/widget_edittext_dark"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:drawablePadding="5dp"
                            android:drawableTint="@color/colorPrimary"
                            android:text="@string/delivery_ku"
                            android:textColor="@android:color/widget_edittext_dark"
                            android:textSize="13sp"
                            android:textStyle="normal"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@color/colorPrimary" />
                    </LinearLayout>


                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/ic_baseline_help_outline_24"
                        app:tint="@color/colorPrimary" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/img2"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="4dp"
                        android:layout_toRightOf="@id/img2"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/why_should_i_use"
                            android:textColor="@android:color/widget_edittext_dark"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:drawablePadding="5dp"
                            android:drawableTint="@color/colorPrimary"
                            android:text="@string/why_desc"
                            android:textColor="@android:color/widget_edittext_dark"
                            android:textSize="13sp"
                            android:textStyle="normal"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@color/colorPrimary" />
                    </LinearLayout>


                </RelativeLayout>
              </LinearLayout>
        </ScrollView>



    </RelativeLayout>


</FrameLayout>